# web-service-demo

./: .gitignore  CMakeLists.txt  FindLibMicroHttpd.cmake  README.md
src/: api.cpp  api.hpp  demo.cpp  libhttpd-utils.cpp  libhttpd-utils.hpp  utils.cpp  utils.hpp
